--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,4 +12,9 @@
 
 .app-container {
   width: $WidthContainer;
+
+  @media screen and (max-width: ($WidthContainer + 40px)) {
+    margin: 0 20px;
+    width: 100%;
+  }
 }
