--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -111,6 +111,7 @@
     right: -85px;
     user-select: none;
     pointer-events: none;
+    object-fit: cover;
 
     @media screen and (max-width: 1480px) {
       right: 0;
@@ -128,9 +129,15 @@
     }
 
     @media screen and (max-width: 1045px) {
-      width: 550px;
-      height: 885px;
+      width: 610px;
+      height: 835px;
       top: 90px;
+    }
+
+    @media screen and (max-width: 900px) {
+      width: 520px;
+      height: 710px;
+      top: 175px;
     }
 
     @media screen and (max-width: 800px) {
@@ -140,17 +147,24 @@
     }
 
     @media screen and (max-width: 625px) {
-      top: 300px;
+      top: 345px;
     }
 
     @media screen and (max-width: 580px) {
-      width: 300px;
+      width: 380px;
       top: 385px;
     }
 
-    @media screen and (max-width: 375px) {
-      width: 250px;
+    @media screen and (max-width: 490px) {
+      width: 350px;
+      height: 425px;
       top: 470px;
+    }
+
+    @media screen and (max-width: 375px) {
+      width: 280px;
+      height: 360px;
+      top: 530px;
     }
   }
 }
