--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -33,12 +33,12 @@
       line-height: 138px;
     }
 
-    @media screen and (max-width: 1230px) {
+    @media screen and (max-width: 1250px) {
       font-size: 110px;
       line-height: 118px;
     }
 
-    @media screen and (max-width: 990px) {
+    @media screen and (max-width: 1010px) {
       font-size: 90px;
       line-height: 98px;
     }
@@ -48,14 +48,19 @@
       line-height: 78px;
     }
 
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 520px) {
       font-size: 50px;
       line-height: 58px;
     }
 
-    @media screen and (max-width: 365px) {
+    @media screen and (max-width: 400px) {
       font-size: 45px;
       line-height: 53px;
+    }
+
+    @media screen and (max-width: 350px) {
+      font-size: 35px;
+      line-height: 33px;
     }
   }
 
@@ -150,9 +155,10 @@
       top: 345px;
     }
 
-    @media screen and (max-width: 580px) {
+    @media screen and (max-width: 600px) {
       width: 380px;
-      top: 385px;
+      height: 450px;
+      top: 430px;
     }
 
     @media screen and (max-width: 490px) {
